removed old references and unused code

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'settings/layout';
 @import 'settings/typography';
 @import 'settings/colors';
+@import 'settings/grid';
 
 // * Utilities
 // ---------------------------------------------
